--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -63,15 +63,15 @@
         </label>
         <div id="purpose_options">
           <label>
-            <input type="radio" name="radio">
+            <input id="generalinquiry" type="radio" name="radio">
             General Inquiry
           </label>
           <label>
-            <input type="radio" name="radio">
+            <input id="reservationquestion" type="radio" name="radio">
             Reservation Question
           </label>
           <label>
-            <input type="radio" name="radio">
+            <input id="websitesuggestion" type="radio" name="radio">
             Website Suggestion
           </label>
         </div>
