--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -79,7 +79,7 @@
 
         <div>
           <label for="message"></label>
-          <textarea id="message" name="message" rows="3"></textarea>
+          <textarea id="message" name="message" rows="3" placeholder="message"></textarea>
         </div>
 
         <div>
