--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
+  <title>Whitewater Rafting: Contact Us</title>
   <!-- what is the point of this meta name? do I need it? -->
   <meta name="description"
-    content="Contact us for more information.  Plan and enjoy the experience of rafting downstream with your friends and family!">
+    content="Contact us for more information.  Make plans for your trip, or offer suggestions regarding our servcies.">
   <meta name="author" content="Kylene Hunter">
   <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -26,7 +26,7 @@
     </nav>
   </header>
   <main>
-    <h1 class="hero">Whitewater Rafting</h1>
+    <h1 class="hero">Whitewater Rafting: Contact Us!</h1>
     <article class="contact">
       <p></p>
       <ul>
