--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -39,11 +39,12 @@
     </article>
 
     <div class="map-form">
-
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d41753.823366878874!2d-90.6100870508833!3d38.93834083995041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1764377121370!5m2!1sen!2sus"
-        width="700" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d41753.823366878874!2d-90.6100870508833!3d38.93834083995041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1764377121370!5m2!1sen!2sus"
+          width="500" height="450" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
       <form>
         <!-- <div class="userinfo"> -->
         <label for="username">
