--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -62,20 +62,26 @@
         <label>
           Message Purpose:
         </label>
-        <div id="purpose_options">
-          <label>
-            <input id="generalinquiry" type="radio" name="radio">
-            General Inquiry
-          </label>
-          <label>
-            <input id="reservationquestion" type="radio" name="radio">
-            Reservation Question
-          </label>
-          <label>
-            <input id="websitesuggestion" type="radio" name="radio">
-            Website Suggestion
-          </label>
-        </div>
+        <ul id="purpose_options">
+          <li>
+            <label>
+              <input id="generalinquiry" type="radio" name="radio">
+              General Inquiry
+            </label>
+          </li>
+          <li>
+            <label>
+              <input id="reservationquestion" type="radio" name="radio">
+              Reservation Question
+            </label>
+          </li>
+          <li>
+            <label>
+              <input id="websitesuggestion" type="radio" name="radio">
+              Website Suggestion
+            </label>
+          </li>
+        </ul>
         <!-- </div> -->
 
         <div>
