--- a/wwr/about.html
+++ b/wwr/about.html
@@ -49,7 +49,7 @@
         <section>
 
             <h2>Adventure Awaits You!</h2>
-            <div class="figure">
+            <div class="adventure">
                 <figure>
                     <img src="images/img-one-sq-opt.jpg" alt="image-one" width="100">
                     <figcaption>
@@ -85,6 +85,8 @@
                     </figcaption>
                 </figure>
             </div>
+
+
 
         </section>
     </main>
