--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -32,7 +32,7 @@
       <ul>
         <li>123 Main River Street</li>
         <li>Kolob, California</li>
-        <li>+1 901 265 9489</li>
+        <li>+1 901-265-9489</li>
         <li>whitewater@rafting.com</li>
       </ul>
       <p></p>
@@ -58,10 +58,12 @@
         </label>
         <!-- </div> -->
 
-        <!-- <div class="purpose"> -->
-        <label>
-          Message Purpose:
-        </label>
+        <div class="m-p">
+          <!-- <div class="purpose"> -->
+          <label>
+            Message Purpose:
+          </label>
+        </div>
         <ul id="purpose_options">
           <li>
             <label>
