--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us Whitewater Rafting</title>
+    <title>Trips Whitewater Rafting</title>
     <meta name="description"
         content="Plan and enjoy the experience of rafting downstream with your friends and family!">
     <meta name="author" content="Kylene Hunter">
