--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,45 +27,68 @@
     <main>
         <div class="hero">
             <img src="images/main-banner-opt.jpg" alt="Rafting for Families">
-            <h1>Whitewater Rafting</h1>
+            <h1>Let Water be Part of Your Adventure!</h1>
+
+        </div>
+
+        <div class="newsletter">
+            <form>
+                <p></p>
+                <h2>Sign up For the Newsletter:</h2>
+                <label for="username">
+                    Name:
+                    <input type="text" id="username" name="username" placeholder="Name">
+                </label>
+
+                <label for="email">
+                    Email:
+                    <input type="email" id="email" name="useremail" placeholder="e-mail">
+                </label>
+
+                <div>
+                    <button type="submit">I want the newsletter!</button>
+                </div>
+            </form>
+        </div>
+
+        <!-- Link to trips page -->
+
+
+        <!-- <button type="submit"><a href="https://kylenehunter.github.io/wdd130/wwr/trips.html">Let's start your
+                Adventure!</a></button> -->
+        <div class="center-button">
+            <a href="https://kylenehunter.github.io/wdd130/wwr/trips.html" class="button-link">Learn More About Us!</a>
+        </div>
+
+        <div class="offerings">
+            <img src="images/helmets-opt.jpg" alt="helmets">
             <article>
-                <p>Let Water be Your Family Adventure!</p>
+                <p>Whitewater Rafting helps you schedule rafting trips for you and your loved ones. Together, we can
+                    arrange for
+                    a
+                    one-day activity, or we can arrange for you to raft for several days. You may bring your children
+                    with you, however
+                    depending on their age and the location/river, they may have to stay behind at camp with a
+                    responsible adult. We
+                    have permanent locations
+                    throughout Utah, though we also reserve locations
+                    throughout the United States as needed.
+                <p>
+            </article>
+            </article>
+            <img src="images/oars-opt.jpg" alt="oars">
+            <article>
+                <p>We will provide
+                    the supplies and trainers, while you just bring your group. When you are scheduling with our
+                    company, it is a requirement to have at least one supervisor and
+                    two trainers on your trip to make sure your trip goes without serious hazards. However, our workers
+                    are trained
+                    in providing safety without interfering with your group bonding times. They will also provide fun
+                    lessons for basic swimming, training what to do if a person falls off the boat, and proper ways to
+                    ride a raft down the river.</p>
             </article>
         </div>
 
-        <form>
-            <p></p>
-            <h2>Sign up For the Newsletter:</h2>
-            <label for="username">
-                Name:
-                <input type="text" id="username" name="username" placeholder="Name">
-            </label>
-
-            <label for="email">
-                Email:
-                <input type="email" id="email" name="useremail" placeholder="e-mail">
-            </label>
-
-            <div>
-                <button type="submit">I want the newsletter!</button>
-            </div>
-        </form>
-
-        <!-- Link to trips page -->
-        <a href=""></a>
-
-        <img src="images/helmets-opt.jpg" alt="helmets">
-        <article>
-            <p>Whitewater Rafting helps you schedule rafting trips for you and your loved ones. You arrange for a
-                one-day activity, or you can arrange a camping trip to raft for several days. We will provide guidelines
-                so that your family can stay safe during your adventure.</p>
-        </article>
-        <img src="images/oars-opt.jpg" alt="oars">
-        <article>
-            <p>We provide trained experts and tutors to help you and supervise your groups during your rafting
-                activities. We have many places owned by the company, but we can also make reservations at other
-                locations if necessary.</p>
-        </article>
 
     </main>
     <footer class="footer">
