--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -2,106 +2,123 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trips Whitewater Rafting</title>
-    <meta name="description"
-        content="Plan and enjoy the experience of rafting downstream with your friends and family!">
-    <meta name="author" content="Kylene Hunter">
-    <link rel="stylesheet" href="styles/rafting.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trips Whitewater Rafting</title>
+  <meta name="description"
+    content="Plan and enjoy the experience of rafting downstream with your friends and family! Here is where you can plan your trip.">
+  <meta name="author" content="Kylene Hunter">
+  <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
-    <header>
-        <img src="images/logo.jpg" alt="whitewater rafting logo">
-        <div id="blank"></div>
-        <nav>
-            <ul class="navigation">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="hero">
-            <img src="images/largercrop-optimized.jpg" alt="Rafting for Families">
-            <h1>Whitewater Rafting</h1>
-            <article>
-                <img src="images/happy-woman-optimized.jpg" alt="Happy Rower">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, nemo? Lorem ipsum dolor, sit amet
-                    consectetur adipisicing elit. Temporibus, possimus corrupti est excepturi quidem aut?</p>
-            </article>
-        </div>
-        <section>
-            <h2>History</h2>
-            <div class="history-container">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
-                    necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
-                    illum. Laboriosam, praesentium!</p>
-                <img src="images/history-opt.jpg" alt="forest">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
-                    necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
-                    illum. Laboriosam, praesentium!</p>
-            </div>
-        </section>
-        <section>
+  <header>
+    <img src="images/logo.jpg" alt="whitewater rafting logo">
+    <div id="blank"></div>
+    <nav>
+      <ul class="navigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="trips.html">Trips</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
 
-            <h2>Adventure Awaits You!</h2>
-            <div class="figure">
-                <figure>
-                    <img src="images/img-one-sq-opt.jpg" alt="image-one" width="100">
-                    <figcaption>
-                        <p>Forest Flow</p>
-                    </figcaption>
-                </figure>
+    <h1 class="hero">Whitewater Rafting</h1>
+    <p> </p>
+    <p></p>
+    <div class="center-button">
+      <a href="https://kylenehunter.github.io/wdd130/wwr/contact.html" class="button-link">Let's plan your
+        schedule!</a>
+    </div>
+    <!-- <a href="https://kylenehunter.github.io/wdd130/wwr/contact.html">Contact Us</a> -->
 
-                <figure>
-                    <img src="images/img-two-sq-opt.jpg" alt="image-two" width="100">
-                    <figcaption>
-                        <p>Grass Rapids</p>
-                    </figcaption>
-                </figure>
+    <div class="offerings">
+      <img src="images/empty-boats.jpg" alt="oars">
+      <article>
+        <p>Forest Flow: This calm, luxurious location provides an environment of thick trees where people can enjoy
+          their surroundings. Our
+          trainers will make sure the rafts are kept
+          at a safe distance from any wild animals spotted, including bear and moose. Warning: If anyone is caught
+          violating the rules the
+          supervisor
+          imposes, the trip will be cancelled for that
+          person, and they will immediately be
+          taken back to camp.</p>
+      </article>
+      <img src="images/white-waves-opt.jpg" alt="helmets">
+      <article>
+        <p>Mound Cruise: This river trip combines scenic views with moments of riding waves and rapids. Mountain goats
+          have been known to be spotted in this area. Children
+          around 8 year old are allowed as long as they are secured inside the raft. As with all rafting events, the
+          supervisor and trainer will
+          review the rules to make sure everyone feels safe.</p>
+      </article>
+      <img src="images/pink-opt.jpg" alt="oars">
+      <article>
+        <p>Water Jump: This rafting river is for those looking for a more daring trip with their friends and family.
+          Here
+          you will ride rapids in Weber Utah and jump literal waterfalls. Extra training will be required prior to
+          actually jumping the waterfalls. Our trainers will make sure each member feels comfortable and ready
+          before attempting to jump the waterfall as a group. This river is for ages 16 and up only, though parents
+          should decide if they want their teenagers riding this.</p>
+      </article>
+    </div>
 
-                <figure>
-                    <img src="images/img-three-sq-opt.jpg" alt="image-three" width="100">
-                    <figcaption>
-                        <p>Mount Cruise</p>
-                    </figcaption>
-                </figure>
 
-                <figure>
-                    <img src="images/img-four-sq-opt.jpg" alt="image-four" width="100">
-                    <figcaption>
-                        <p>Rock Sliding</p>
-                    </figcaption>
-                </figure>
-
-                <figure>
-                    <img src="images/img-five-sq-opt.jpg" alt="image-5" width="100">
-                    <figcaption>
-                        <p>Water Jump</p>
-                    </figcaption>
-                </figure>
-            </div>
-
-        </section>
-    </main>
-    <footer class="footer">
-        <p>&copy;2025 🚣‍♂️ Whitewater Rafting 🚣‍♀️ Kylene Hunter</p>
-        <nav class="socialmedia">
-            <a href="https://facebook.com">
-                <img src="images/facebook-optimized.svg" alt="Facebook Icon" width="50">
-            </a>
-            <a href="https://linkedin.com">
-                <img src="images/linkedin-square-optimized.svg" alt="LinkedIn Icon" width="50">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram-square-optimized.svg" alt="Instagram Icon" width="50">
-            </a>
-        </nav>
-    </footer>
+    <table>
+      <thead>
+        <tr>
+          <th>Name:</th>
+          <th>Location:</th>
+          <th>Danger/Adventure Level Scale (1-5)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Forest Flow</td>
+          <td>California</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Grass Rapids</td>
+          <td>Weber, Utah</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>Mount Cruise</td>
+          <td>Morgan, Utah</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>Rock Sliding</td>
+          <td>Box Elder, Utah</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>Water Jump</td>
+          <td>Weber, Utah</td>
+          <td>4</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+  <footer class="footer">
+    <p>&copy;2025 🚣‍♂️ Whitewater Rafting 🚣‍♀️ Kylene Hunter</p>
+    <nav class="socialmedia">
+      <a href="https://facebook.com">
+        <img src="images/facebook-optimized.svg" alt="Facebook Icon" width="50">
+      </a>
+      <a href="https://linkedin.com">
+        <img src="images/linkedin-square-optimized.svg" alt="LinkedIn Icon" width="50">
+      </a>
+      <a href="https://instagram.com">
+        <img src="images/instagram-square-optimized.svg" alt="Instagram Icon" width="50">
+      </a>
+    </nav>
+  </footer>
 </body>
 
 </html>
