--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -26,7 +26,7 @@
   </header>
   <main>
 
-    <h1 class="hero">Whitewater Rafting</h1>
+    <h1 class="hero">Plan Your Trip:</h1>
     <p> </p>
     <p></p>
     <div class="center-button">
