--- a/wwr/index.html
+++ b/wwr/index.html
@@ -60,6 +60,7 @@
             <a href="https://kylenehunter.github.io/wdd130/wwr/trips.html" class="button-link">Learn More About Us!</a>
         </div>
 
+        <h2>What We Offer:</h2>
         <div class="offerings">
             <img src="images/helmets-opt.jpg" alt="helmets">
             <article>
