--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -35,6 +35,8 @@
     </div>
     <!-- <a href="https://kylenehunter.github.io/wdd130/wwr/contact.html">Contact Us</a> -->
 
+
+    <h2>Trip Options Summary</h2>
     <div class="offerings">
       <img src="images/empty-boats.jpg" alt="oars">
       <article>
@@ -50,7 +52,7 @@
       </article>
       <img src="images/white-waves-opt.jpg" alt="helmets">
       <article>
-        <p>Mound Cruise: This river trip combines scenic views with moments of riding waves and rapids. Mountain goats
+        <p>Mount Cruise: This river trip combines scenic views with moments of riding waves and rapids. Mountain goats
           have been known to be spotted in this area. Children
           around 8 year old are allowed as long as they are secured inside the raft. As with all rafting events, the
           supervisor and trainer will
@@ -67,40 +69,52 @@
       </article>
     </div>
 
-
+    <h2>Our Permanent Locations:</h2>
     <table>
       <thead>
         <tr>
           <th>Name:</th>
           <th>Location:</th>
           <th>Danger/Adventure Level Scale (1-5)</th>
+          <th>Camping Options</th>
+          <th>Hotel Room Options</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>Forest Flow</td>
-          <td>California</td>
+          <td>Carbon, Utah</td>
           <td>2</td>
+          <td>yes</td>
+          <td>yes</td>
         </tr>
         <tr>
           <td>Grass Rapids</td>
           <td>Weber, Utah</td>
           <td>1</td>
+          <td>no</td>
+          <td>yes</td>
         </tr>
         <tr>
           <td>Mount Cruise</td>
           <td>Morgan, Utah</td>
           <td>3</td>
+          <td>yes</td>
+          <td>no</td>
         </tr>
         <tr>
           <td>Rock Sliding</td>
           <td>Box Elder, Utah</td>
           <td>3</td>
+          <td>yes</td>
+          <td>no</td>
         </tr>
         <tr>
           <td>Water Jump</td>
           <td>Weber, Utah</td>
           <td>4</td>
+          <td>yes</td>
+          <td>yes</td>
         </tr>
       </tbody>
     </table>
