--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,20 +30,24 @@
             <h1>Whitewater Rafting</h1>
             <article>
                 <img src="images/happy-woman-optimized.jpg" alt="Happy Rower">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, nemo? Lorem ipsum dolor, sit amet
-                    consectetur adipisicing elit. Temporibus, possimus corrupti est excepturi quidem aut?</p>
+                <p>Whitewater Rafting provides an easy, personalized experience for any group wanting to go river
+                    rafting, whether it be family, friends, or both.
+                </p>
             </article>
         </div>
         <section>
             <h2>History</h2>
             <div class="history-container">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
-                    necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
-                    illum. Laboriosam, praesentium!</p>
+                <p> Whitewater Rafting company was inspired by Jon Clover in 1999. He enjoyed how different rivers
+                    gave different opportunities, from exciting rides to quiet, reflective scenery. He wanted to provide
+                    people with different options.
+                </p>
                 <img src="images/history-opt.jpg" alt="forest">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, dolor! Quos tempore minima possimus,
-                    necessitatibus similique odit reprehenderit fugiat quasi laborum iste nostrum adipisci. Ipsam, ad
-                    illum. Laboriosam, praesentium!</p>
+                <p>In 2004, an employee came up with a system that enabled the company to provide a planning
+                    service that helps
+                    customers not only plan their
+                    river trips, but also plan where they will be staying during their adventures.
+                </p>
             </div>
         </section>
         <section>
